# augatgatf

./: .gitignore  CMakeLists.txt  codecov.yml
.github/workflows/: cross-build.yml  deploy-gh-pages.yml
include/kl/: instance_descriptor.hh
include/kl/common/: point2.hh  rectangle2.hh
include/kl/graphics/: blend_state_descriptor.hh  buffer.hh  buffer_descriptor.hh  color_blend_state.hh  color_blend_state_descriptor.hh  context.hh  context_descriptor.hh  depth_stencil_state.hh  depth_stencil_state_descriptor.hh  device.hh  device_child.hh  device_descriptor.hh  format.hh  framebuffer.hh  instance.hh  instance_child.hh  instance_descriptor.hh  primitive_topology.hh  program.hh  rasterization_state.hh  rasterization_state_descriptor.hh  sampler.hh  sampler_descriptor.hh  scissor_rect.hh  shader.hh  surface.hh  surface_descriptor.hh  swapchain.hh  swapchain_descriptor.hh  texture.hh  texture_descriptor.hh  vertex_input_state.hh
include/kl/graphics/opengl/: gl_context.hh  gl_context_descriptor.hh  gl_context_lock.hh  surface_config.hh  symbol_converter.hh
include/kl/math/: matrix2x2.hh  matrix3x3.hh  matrix4x4.hh  vector2.hh  vector3.hh  vector4.hh
include/kl/platform/: instance.hh  instance_descriptor.hh  task.hh  window.hh  window_descriptor.hh
include/kl/text/: encoding.hh
internal/keel/: CMakeLists.txt
internal/keel/include/kl/common/: extent2.hh  extent3.hh  offset2.hh  offset3.hh
internal/keel/src/: main.cc
internal/keel/test/: test_file.cc  test_loop.cc  test_matrix2x2.cc  test_task.cc  test_vector2.cc
internal/web-audio-cpp/: CMakeLists.txt
internal/web-audio-cpp/debug/: resampler.cc
internal/web-audio-cpp/design/: main.py  requirements.txt
internal/web-audio-cpp/example/: biquad_filter.cc  gain.cc  iir_filter.cc  oscillator.cc  oscillator_custom.cc
internal/web-audio-cpp/include/: web_audio.h  web_audio.hh
internal/web-audio-cpp/include/web_audio/: analyzer_options.h  analyzer_options.hh  audio_buffer.h  audio_buffer.hh  audio_buffer_options.h  audio_buffer_source_node.hh  audio_buffer_source_options.hh  audio_context.hh  audio_context_latency_category.h  audio_context_options.h  audio_context_options.hh  audio_context_render_size_category.h  audio_context_state.h  audio_destination_node.h  audio_destination_node.hh  audio_listener.h  audio_listener.hh  audio_node.h  audio_node.hh  audio_node_options.h  audio_node_options.hh  audio_param.h  audio_param.hh  audio_param_descriptor.h  audio_param_descriptor.hh  audio_processing_event_init.hh  audio_render_capacity.hh  audio_render_capacity_event_init.h  audio_render_capacity_options.h  audio_scheduled_source_node.h  audio_scheduled_source_node.hh  audio_sink_info.hh  audio_sink_options.h  audio_sink_options.hh  audio_sink_type.h  audio_timestamp.h  audio_worklet.hh  audio_worklet_node_options.h  audio_worklet_node_options.hh  automation_rate.hh  (+62 more)
internal/web-audio-cpp/include/web_audio/detail/: audio_graph.hh  audio_listener_node.hh  audio_node_input.hh  audio_node_output.hh  common.hh  convolver.hh  downsampler.hh  event_queue.hh  math_helper.hh  message.hh  message_queue.hh  param_collection.hh  param_event.hh  render_quantum.hh  upsampler.hh  upsampler2x.hh  vec3.hh  vector_helper.hh  wave_processing.hh  weak_ptr_helper.hh
internal/web-audio-cpp/include/web_audio/details/: audio_graph.h  audio_graph.hh  audio_node_input.h  audio_node_output.h  common.hh  event_queue.h  message.h  message_queue.h  message_queue.hh  node_graph.h  param_collection.h  param_event.h  render_quantum.h  weak_ptr_helper.hh
internal/web-audio-cpp/src/: audio_buffer.cc  audio_destination_node.cc  audio_listener.cc  audio_node.cc  audio_param.cc  audio_scheduled_source_node.cc  base_audio_context.cc  delay_node.cc  dom_exception.cc  offline_audio_context.cc  periodic_wave.cc
internal/web-audio-cpp/src/detail/: audio_graph.cc
internal/web-audio-cpp/src/details/: audio_graph.cc  event_queue.cc  message_queue.cc  node_graph.cc  param_collection.cc  render_quantum.cc
internal/web-audio-cpp/src/web_audio/: audio_buffer.cc  audio_buffer_source_node.cc  audio_context.cc  audio_destination_node.cc  audio_listener.cc  audio_node.cc  audio_param.cc  audio_render_capacity.cc  audio_scheduled_source_node.cc  base_audio_context.cc  biquad_filter_node.cc  constant_source_node.cc  convolver_node.cc  delay_node.cc  dom_exception.cc  gain_node.cc  iir_filter_node.cc  offline_audio_context.cc  oscillator_node.cc  periodic_wave.cc  stereo_panner_node.cc  wave_shaper_node.cc
internal/web-audio-cpp/src/web_audio/detail/: audio_graph.cc  audio_listener_node.cc  downsampler.cc  event_queue.cc  message_queue.cc  param_collection.cc  render_quantum.cc  upsampler.cc  upsampler2x.cc  vec3.cc  wave_processing.cc
internal/web-audio-cpp/test/: dummy_node.h  dummy_node.hh  impl.cc  test_audio_buffer.cc  test_audio_buffer_source_node.cc  test_audio_graph.cc  test_audio_node.cc  test_audio_param.cc  test_biquad_filter_node.cc  test_constant_source_node.cc  test_convolver.cc  test_convolver_node.cc  test_delay_node.cc  test_helper.hh  test_math_helper.cc  test_message_queue.cc  test_node_graph.cc  test_offline_audio_context.cc  test_oscillator_node.cc  test_periodic_wave.cc  test_promise.cc  test_render_quantum.cc  test_wave_processing.cc  test_wave_shaper_node.cc
shaders/: hello.vert  test.vert  texture.frag  texture.vert  uniform.frag  uniform.vert
src/: main.cc
src/kl/graphics/: buffer.cc  color_blend_state.cc  context.cc  device.cc  device_descriptor.cc  features.cc  framebuffer.cc  instance.cc  program.cc  rasterization_state.cc  sampler.cc  scissor_rect.cc  shader.cc  surface.cc  swapchain.cc  texture.cc  vertex_input_state.cc  viewport.cc
src/kl/graphics/opengl/: gl_context.cc  gl_context_descriptor.cc  gl_context_lock.cc
src/kl/platform/: frame_awaiter.cc  instance.cc  window.cc
src/kl/text/: encoding.cc
test/: test_encoding.cc  test_main.cc  test_matrix2x2.cc  test_matrix4x4.cc  test_task.cc  test_vector2.cc
tools/: create_class.mjs  generate_cmake.mjs  generate_header.mjs  gitignore_fetch.mjs  to_array.mjs
(+56 files in other folders)
